<resources>
    <string name="app_name">RecyclerView</string>
    <string name="paleta_de_colores">PALETA DE COLORES</string>
    <string name="elige_un_color">Elige un color</string>
    <string name="aplicar">Aplicar</string>
    <string name="negro">Negro</string>
    <string name="violeta">Violeta</string>
    <string name="azul">Azul</string>
    <string name="cian">Cian</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="naranja">Naranja</string>
    <string name="rojo">Rojo</string>
    <string name="blanco">Blanco</string>
    <string name="elige_una_barra">Elige una barra</string>
    <string name="h_1">H 1</string>
    <string name="h_2">H 2</string>
    <string name="h_3">H 3</string>
    <string name="fondo">Fondo</string>
</resources>